# v8_embeded

./: .clang-format  CMakeLists.txt  LICENSE  README.md  build_win.bat
.github/workflows/: main.yml
resource/: main.js
src/: main.cpp
src/engine/: engine.cpp  engine.hpp  javascript.cpp  javascript.hpp  runner.cpp  runner.hpp  v8_utils.hpp
src/engine/bind/: global_object_instance.hpp  global_object_template.hpp  object_instance.hpp  object_template.hpp  object_template_binder.hpp
src/object/: console.cpp  console.hpp
src/object/test/: test_object1.hpp
